fix: Sidenav positioning and navbar z-index

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,3 +9,7 @@ mat-sidenav {
 #router-outlet {
   overflow-y: auto;
 }
+
+mat-toolbar {
+  z-index: 2;
+}
